# javascript-native-interface-book

./: App.tsx  package-lock.json  package.json
android/app/: CMakeLists.complex.txt  CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/app/src/main/java/com/yourprojectname/: ExampleModule.java  ExampleModulePackage.java  MainActivity.kt  MainApplication.kt
cpp/: exampleJsiLibrary.cpp  exampleJsiLibrary.h
ios/: Podfile  ReactNativeJsiBridge.h  ReactNativeJsiBridge.mm
ios/YourProjectName/: AppDelegate.mm  Info.plist
ios/YourProjectName.xcodeproj/: project.pbxproj
node_modules.old/: .package-lock.json  .yarn-integrity
node_modules.old/.bin/: .packager.env
node_modules.old/@react-native/gradle-plugin/: .project
